[tool.poetry]
name = "default_app"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "3.14"
Flask = "^3.1.2"

[tool.poetry.scripts]
my-script = "default_app.server:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
